<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.mercury.boot</groupId>
    <artifactId>mercury-boot-starter-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <artifactId>mercury-boot-api</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <modules>
    <module>modules/mercury-base-api</module>
    <module>modules/mercury-system</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <revision>0.0.1-SNAPSHOT</revision>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.mercury.boot</groupId>
        <artifactId>mercury-system-module</artifactId>
        <version>0.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.mercury.boot</groupId>
        <artifactId>mercury-boot-crud</artifactId>
        <version>0.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.mercury.boot</groupId>
        <artifactId>mercury-boot-config</artifactId>
        <version>0.0.1-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>
